# rust-game

./: .gitignore  Cargo.toml  pseudocode.md  readme.md
assets/: messages.txt  obstacles.txt
src/: game.rs  main.rs  new_cells_vec.rs  quick_sort.rs  render_board.rs  render_game.rs  structs.rs
src/game/: button_events.rs  change_state.rs  fetch_messages.rs  gen_cells_vec.rs  gen_obstacles.rs  quick_sort_cells.rs  render.rs
src/game/button_events/: game_start.rs  player_turn.rs
src/game/render/: game_board.rs  player_amnt_input.rs  render_board.rs  render_player_prompt.rs  render_players.rs  render_turn.rs  render_winner.rs
src/render_game/: game_board.rs  player_amnt_input.rs
