[package]
name = "sixth_form_summer_work"
version = "0.1.0"
authors = ["Oliver <oliver@archer.fi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston_window = "0.*"
find_folder = "0.*"
rand = "0.*"
rand_distr = "0.*"
gfx_device_gl = "0.*"